--- a/SwiftiDate/Info.plist
+++ b/SwiftiDate/Info.plist
@@ -2,6 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UNNotificationExtensionCategory</key>
+	<string>message</string>
+	<key>FirebaseMessagingAutoInitEnabled</key>
+	<true/>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>我們將使用通知來提醒您新的消息和活動更新。</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
+	<key>CFBundleName</key>
+	<string>SwiftiDate</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
