--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ SwiftiDate/GlobalVariables.swift
 *.xcuserstate
 firebase_chat_sorter.py
 swiftidate-cdff0-firebase-adminsdk-e2p44-7c5e06ebfc.json
+SwiftiDate.xcodeproj/project.pbxproj
