--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ SwiftiDate/GlobalVariables.swift
 firebase_chat_sorter.py
 swiftidate-cdff0-firebase-adminsdk-e2p44-7c5e06ebfc.json
 SwiftiDate.xcodeproj/project.pbxproj
+mlc-llm
+dist
+
