--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ swiftidate-cdff0-firebase-adminsdk-e2p44-7c5e06ebfc.json
 SwiftiDate.xcodeproj/project.pbxproj
 mlc-llm
 dist
-google-cloud-sdk
+google-cloud-sdk/
+google-cloud-cli-darwin-arm.tar.gz
 # macOS
 *.DS_Store
 # Xcode
