--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@genkit-ai/firebase": "^1.0.4",
     "@genkit-ai/vertexai": "^1.0.4",
+    "@pinecone-database/pinecone": "^5.0.2",
     "express": "^4.21.2",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
