feat: 移除舊的 Chat AI 模組 & 新增 PhoneValidator
- 移除不再使用的 GeminiView、modelSelector 等檔案
- 新增 PhoneValidator.swift 負責電話號碼驗證
- 新增 OTPVerificationUITests.mov/mp4 作為測試錄影結果
- 調整 PhoneNumberEntryView 引入新驗證邏輯
- 移除多餘的 FirebaseManager 相關檔案

close #123

--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,4 @@ xcuserdata/
 public/firebase-init.js
 apphosting.local.yaml
 .firebase/hosting.cHVibGlj.cache
-
+functions/src/swiftidate-cdff0-firebase-adminsdk-e2p44-34ef83ec05.json
