--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ public/firebase-init.js
 apphosting.local.yaml
 .firebase/hosting.cHVibGlj.cache
 functions/src/swiftidate-cdff0-firebase-adminsdk-e2p44-34ef83ec05.json
+aps_development.cer
+憑證.p12
+CertificateSigningRequest.certSigningRequest
