fix(workflows): 指定 Node 版本以修正 Firebase Hosting build 問題
- 在 firebase-hosting-merge.yml 與 firebase-hosting-pull-request.yml 中加入 actions/setup-node 步驟
- 指定 node-version: 16，避免因 Node 版本不符而導致 npm build 失敗

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -10,8 +10,18 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
+      # 1) 先 checkout
       - uses: actions/checkout@v4
+
+      # 2) 安裝指定版本的 Node
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      # 3) 執行安裝與建置
       - run: npm ci && npm run build
+
+      # 4) 部署到 Firebase Hosting
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
