--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-GoogleService-Info.plist
+*GoogleService-Info.plist
+*GoogleService-Info.plist.base64
 *.xcuserstate
 firebase_chat_sorter.py
 swiftidate-cdff0-firebase-adminsdk-e2p44-7c5e06ebfc.json
