feat: 重構專案目錄結構並更新 import 路徑
- 將 UserSettings、AppState、ConsumableStore 等檔案移至 providers/ 資料夾
- 將 local_storage_manager.dart 新增到 services/ 資料夾
- 調整 views/ 下檔案的 import 路徑以符合新結構
- 更新 .swiftlint.yml 配置以符合專案目錄
- 新增 SwiftLint Run Script Phase（未在 Xcode 中修改腳本內容）

此 commit 使專案結構更清晰，也利於日後維護與擴充。

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ functions/src/swiftidate-cdff0-firebase-adminsdk-e2p44-34ef83ec05.json
 aps_development.cer
 憑證.p12
 CertificateSigningRequest.certSigningRequest
+flutter/swiftidate/lib/config/firebase_options.dart
+commit.txt
+bfg.jar
