--- a/flutter/swiftidate/pubspec.yaml
+++ b/flutter/swiftidate/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   firebase_auth: ^4.4.0  # 請根據最新版本或你的需求設定
   provider: ^6.0.0
   shared_preferences: ^2.0.15
+  firebase_analytics: ^10.0.7
+  mixpanel_flutter: ^1.2.1
+  geolocator: ^9.0.2
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
