--- a/flutter/swiftidate/pubspec.yaml
+++ b/flutter/swiftidate/pubspec.yaml
@@ -34,24 +34,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^2.0.0
-  firebase_auth: ^4.4.0  # 請根據最新版本或你的需求設定
-  provider: ^6.0.0
-  shared_preferences: ^2.0.15
-  firebase_analytics: ^10.0.7
-  mixpanel_flutter: ^1.2.1
-  geolocator: ^9.0.2
-  http: ^0.13.5
-  cloud_firestore: ^4.0.0
-  firebase_database: ^10.0.7
-  firebase_storage: ^11.1.0
-  flutter_webrtc: ^0.12.12+hotfix.1
-  
-  # 從 GitHub 直接引用 flutter-webrtc-demo
-  flutter_webrtc_demo:
-    git:
-      url: https://github.com/flutter-webrtc/flutter-webrtc-demo.git
-      ref: master
 
 dev_dependencies:
   flutter_test:
@@ -76,10 +58,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-    
-  assets:
-    - assets/turbo_view_image.jpg
-#    - assets/photo1.png
+  # assets:
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
