feat(auth): 完成 Firebase 簡訊驗證流程
- 新增 OTPVerificationView，支援輸入與驗證 6 碼 OTP
- 整合 Firebase PhoneAuthProvider，完成發送與驗證流程
- 加入測試模式 (isAppVerificationDisabledForTesting) 以便開發
- 支援倒數計時與重新發送 OTP
- 驗證成功後導向真人認證畫面

--- a/iOS/SwiftiDate/Info.plist
+++ b/iOS/SwiftiDate/Info.plist
@@ -2,24 +2,37 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSCameraUsageDescription</key>
-	<string>需要相機權限進行臉部追蹤</string>
-	<key>UNNotificationExtensionCategory</key>
-	<string>message</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>app-1-131205636358-ios-bec8d4fd284a46d9e6be87</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>stevenstudio.SwiftiDate</string>
+		</dict>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.googleusercontent.apps.131205636358-vs1530oepa4dbclt1bf8v96dcg9flbhb</string>
+		</dict>
+	</array>
+	<key>FirebaseAppDelegateProxyEnabled</key>
+	<true/>
 	<key>FirebaseMessagingAutoInitEnabled</key>
 	<true/>
-	<key>NSUserTrackingUsageDescription</key>
-	<string>我們將使用通知來提醒您新的消息和活動更新。</string>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>remote-notification</string>
-	</array>
-	<key>CFBundleName</key>
-	<string>SwiftiDate</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
+	<key>UNNotificationExtensionCategory</key>
+	<string>message</string>
 </dict>
 </plist>
