feat(auth): update iOS login/register views and Info.plist for Firebase iOS integration
- Updated UI and logic in CreatePasswordView, OTPVerificationView, PhoneNumberEntryView, UploadPhotoView, UserGenderSelectionView
- Added CropViewControllerWrapper for photo handling
- Modified Info.plist for APNs and Firebase settings
- Updated project.pbxproj configuration
- Updated LoginOrRegisterView to integrate new flows
- Revised commit.txt documentation

--- a/iOS/SwiftiDate/Info.plist
+++ b/iOS/SwiftiDate/Info.plist
@@ -18,6 +18,14 @@
 				<string>com.googleusercontent.apps.131205636358-vs1530oepa4dbclt1bf8v96dcg9flbhb</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>app-1-131205636358-ios-bec8d4fd284a46d9e6be87</string>
+			</array>
+		</dict>
 	</array>
 	<key>FirebaseAppDelegateProxyEnabled</key>
 	<true/>
