Update iOS Firebase Auth flow - Added Firebase Auth password linking in CreatePasswordView - Updated PasswordLoginView for Email/Password login - Updated SwipeCardView - Added PhoneNumberUtils.swift for phone formatting - Updated .gitignore - Added checkPhone_merged.js

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ CertificateSigningRequest.certSigningRequest
 flutter/swiftidate/lib/config/firebase_options.dart
 commit.txt
 bfg.jar
+All\ Developermnt\ And\ Prouction\ Certi/
+All\ Developermnt\ And\ Prouction\ Certi.zip
